--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <map>My Map Element Here</map>
     <form action="/action_page.php">
       <br>
-      Type of Restaurant:
+      <label>Type of Restaurant:</label>
       <input type="text" name="firstname" value="Restaurant">
       <br>
-      Average meal cost:
+      <label>Average meal cost:</label> 
       <input type="text" name="lastname" value="meal">
       <br>
-      Last visited:
+      <label>Last visited:</label> 
       <input type="text" name="visited" value="visited"><br><br>
       <input type="submit" value="Save">
     </form>
