--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       <input type="text" name="firstname" value="Restaurant">
       <br>
       <label>Average meal cost:</label> 
-      <input type="text" name="lastname" value="meal">
+      <input type="range" name="range" min="0" max="3.14" step="any">
       <br>
       <label>Last visited:</label> 
-      <input type="text" name="visited" value="visited"><br><br>
+      <input type="date" name="visited"><br><br>
       <input type="submit" value="Save">
     </form>
   </section>
