--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <form action="/action_page.php">
       <br>
       <label>Type of Restaurant:</label>
-      <input type="text" name="firstname" value="Restaurant">
+      <input type="text" name="firstname" placeholder="Restaurant">
       <br>
       <label>Average meal cost:</label> 
       <input type="range" name="range" min="0" max="3.14" step="any">
